--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@fullcalendar/angular": "^5.8.0",
     "@fullcalendar/daygrid": "^5.8.0",
     "@fullcalendar/interaction": "^5.8.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "lightbox2": "^2.11.3",
+    "ngx-carousel": "^1.3.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
